- Fixed spacing
git-svn-id: http://svn.ez.no/svn/extensions/ezwcms/trunk@512 49f50cf4-cce6-0310-bc1e-a21d999f3d8f

--- a/extension/ezpnow/design/ezpnow/stylesheets/content.css
+++ b/extension/ezpnow/design/ezpnow/stylesheets/content.css
@@ -1192,7 +1192,7 @@ div.box-et div.box-content div.block div.left img
 	border: none;
 	position: relative;
 	top: -8px;
-	margin-right: 1em;
+	margin-right: 0.25em;
 }
 
 div.box-et div.box-content div.block div.right img
@@ -1200,7 +1200,7 @@ div.box-et div.box-content div.block div.right img
 	border: none;
 	position: relative;
 	top: -8px;
-	margin-right: 0.75em;
+	margin-right: 0.25em;
 }
 
 div.box-et div.box-content div.block div.right img.oohelp
@@ -1289,13 +1289,13 @@ div.box-et div.bl
 
 div.box-et div.block div.left
 {
-	width: 59%;
+	width: 62%;
 }
 
 div.box-et div.block div.right
 {
 	text-align: right;
-	width: 40%;
+	width: 38%;
 }
 
 div.box-et-content-edit div.block div.left
